# worms

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SUMMARY.md  meson.build  run  setup.sh  syntax.md  worms.out
.cache/clangd/index/: core.h.AAE29091E57980DE.idx  inst.h.DE135038B6ED48E9.idx  lex.cc.881410EC4EDC30FE.idx  lex.h.A5B2FA6ABD2E5AAA.idx  main.cc.1CEA4DF390024DBD.idx  parse.cc.8D9D438E3AA115F0.idx  parse.h.A1FF319A443C254C.idx  parser.h.71C84AB87D445FAD.idx  stack.cc.2C8705BF489B2E7B.idx  stack.h.0B80BC71FD647AFD.idx  traps.h.B9EB7890ED3FFC15.idx  vm.cc.E6AD178B9994DBF4.idx  vm.h.D053B93296BDF09E.idx  wr.cc.423BCA0CFCC88767.idx
.hooks/: pre-commit
src/: CMakeLists.txt  LICENSE  main.cc  meson.build  version.h
src/include/: CMakeLists.txt  leb128.h  meson.build  nanoid.cpp  nanoid.hpp  spdlog.make
src/lib/: CMakeLists.txt  core.cc  core.h  inst.h  meson.build  stack.cc  stack.h  traps.h  utils.cc  utils.h  vm.cc  vm.h
src/snailer/: CMakeLists.txt  byte_gen.cc  byte_gen.h  byte_load.cc  byte_load.h  meson.build  module.cc  module.h  snailer_ieee.h  snailer_leb128.h  snailer_nanoid.h  val.h
src/wr/: CMakeLists.txt  meson.build  wr.cc
src/wr/compiler/: CMakeLists.txt  gen.cc  gen.h  lex.cc  lex.h  meson.build  parse.cc  parse.h  parser.h
src/wr/examples/: basic.wor  branching.wor  gen.wor
subprojects/nanoid_cpp/: nanoid-config.cmake
subprojects/nanoid_cpp/cmake/: nanoid-targets.cmake
syntax/: README.md  functions.md  variables.md
