# cmake = import('cmake')
#
# sub_proj = cmake.subproject('nanoid_cpp')
#
# nanoid = sub_proj.dependency('nanoid')
nanoid = shared_library('Nanoid', './nanoid.hpp')
leb128 = shared_library('Leb128', './leb128.h')
ieee754 = shared_library('IEEE754', './ieee754_types.hpp')
argparse = shared_library('argparse', './argparse.hpp')




