inst = library('Instructions', './inst.h')
core = library('Core', './core.h', './core.cc')
traps = library('Traps', './traps.h')
stack = library('Stack', './stack.h', './stack.cc', link_with: [core])
vm = library('VM', sources: ['./vm.h', './vm.cc'], link_with: [stack, core])
utils = library('Utils', './utils.h', './utils.cc')
